@@ -1,25 +1,0 @@
-Source: chmdeco
-Section: utils
-Priority: optional
-Maintainer: Pabs <pabs@zip.to>
-Build-Depends: debhelper (>> 4.0.0)
-Standards-Version: 3.5.8
-
-Package: chmdeco
-Architecture: any
-Depends: ${shlibs:Depends} ${misc:Depends}
-Suggests: hhm, chmspec, chmlib, chmtools, helpdeco
-Description: Compiled HTML Help (CHM) decompiler
- A program to convert the internal files of Compiled HTML Help (CHM) files back
- into the authoring files used by the CHM compiler to create the CHM files in
- the first place.
- .
- CHM files are used on the Micosoft Windows platform to store program
- documentation, almost always in the form of HTML, with some non-standard
- quirks. CHM files are a form of archive known as InfoTech Storage Format
- (ITSF) files and contain some special files to implement features of the CHM
- viewer. On Windows they are accessed through a kind of virtual filesystem
- exposed by a dynamically loaded library. ITSF files have UTF-8 filenames and
- use an LZX cruncher to compress all the files in one big chunk. Both the ITSF
- and the formats of the internal CHM files are highly indexed and their designs
- are all clearly optimized for read-only access.
