@@ -1,20 +1,0 @@
-This package was debianized by Pabs <pabs@zip.to> on
-Wed, 28 May 2003 20:34:43 +0800.
-
-It can be downloaded from http://bonedaddy.net/pabs3/hhm/#chmdeco
-
-Upstream Author: Pabs <pabs@zip.to>
-
-Copyright (C) 2003 Pabs
-
-This file is part of chmdeco; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2 of the License, or
-any later version.
-
-You should have received a copy of the GNU General Public License with
-your Debian GNU/Linux system, in `/usr/share/common-licenses/GPL', or
-with the Debian GNU/Linux chmdeco source package as the file COPYING.
-If not visit `http://www.gnu.org/copyleft/gpl.html', or write to the
-Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
-MA 02111-1307, USA.
