@@ -1,5 +1,0 @@
-NEWS
-README
-TODO
-AUTHORS
-THANKS
