@@ -1,3 +1,0 @@
-# Download Pattern			Version	Script
-version=2
-http://bonedaddy.net/pabs3/hhm/chmdeco-(.*)\.tar\.gz	debian	uupdate
