@@ -1,6 +1,0 @@
-chmdeco (0.3-1) unstable; urgency=low
-
-  * Initial Release.
-
- -- Pabs <pabs@zip.to>  Wed, 28 May 2003 20:34:43 +0800
-
